--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "styled-components": "^5.3.9",
-    "uuid": "^9.0.0"
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/uuid": "^9.0.1",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
